F-droid recipes updated